<resources>
    <string name="app_name">Hacky</string>
    <string name="app_tag_line">Boost your daily life</string>


    <string name="login">Login</string>
    <string name="enter_your_credentials_to_connect">Enter your credentials to connect</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password_with_question">Forgot Password ?</string>
    <string name="submit">Submit</string>
    <string name="or_connect_with">or connect with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here!</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_username">Please enter a valid username</string>


    <!-- Sign up-->
    <string name="sign_up">Sign up</string>
    <string name="please_fill_the_details_and_create_an_account">Please fill the details and create an account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="login_with_exclaimation">Login!</string>
    <string name="skip">Skip</string>


    <string name="title_home">Home</string>
    <string name="title_videos">Videos</string>
    <string name="title_categories">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="by_name">By %s</string>
    <string name="empty_title">Please enter a title.</string>
    <string name="empty_description">Please enter a description.</string>
    <string name="empty_category">Please select a category.</string>
    <string name="invalid_url">Please enter a valid URL.</string>
    <string name="hack_created">Hack created successfully !!</string>


    <string name="in_development">In Development !!</string>
    <string name="share">Share</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_favourites">Removed from favourites</string>

    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="create_your_own_hack_and_let_the_community_know">Create your own unique hacks/tips and let the community know.</string>
    <string name="fetch_all_latest_hacks_and_save_them_for_later">Fetch all latest hacks and tips and save them for later.</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_internet">No Internet Connection !!</string>
    <string name="be_your_own_master_with_useful_daily_life_tips_and_some_cool_hacks">Be your own master with useful daily life tips and some cool hacks.</string>

</resources>