<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_videos"
        android:icon="@drawable/ic_video_cam"
        android:title="@string/title_videos" />


    <item
        android:id="@+id/add"
        android:title="@string/title_videos" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/icon_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/title_settings" />

</menu>

