<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".enroll.ui.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="@dimen/margin_medium_large_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_medium_large_16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:fontFamily="@font/avenirltstd_bold"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:fontFamily="@font/avenirltstd_roman"
        android:text="@string/please_fill_the_details_and_create_an_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/txtSignup" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_semi_medium"
        android:background="@drawable/bg_login_white_rounded"
        android:padding="@dimen/padding_medium_10"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/edtName"
            style="@style/editTextLoginWhite"
            android:background="@null"
            android:ems="10"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_semi_medium"
        android:background="@drawable/bg_login_white_rounded"
        android:padding="@dimen/padding_medium_10"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/clName">

        <EditText
            android:id="@+id/edtEmail"
            style="@style/editTextLoginWhite"
            android:background="@null"
            android:ems="10"
            android:hint="@string/email_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPhone"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_semi_medium"
        android:background="@drawable/bg_login_white_rounded"
        android:padding="@dimen/padding_medium_10"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/clEmail">

        <EditText
            android:id="@+id/edtPhone"
            style="@style/editTextLoginWhite"
            android:background="@null"
            android:digits="0123456789"
            android:ems="16"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:inputType="text|phone"
            android:maxLength="15"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgDropdown"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/txtCountryCode"
            style="@style/editTextLoginWhite"
            android:layout_width="wrap_content"
            android:background="@null"
            android:fontFamily="@font/avenirltstd_medium"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_showArrow="false"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textGravity="CENTER"
            app:ccp_textSize="@dimen/font_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgDropdown"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtCountryCode"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/drop_down" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_medium_large_16"
        android:background="@drawable/bg_login_white_rounded"
        android:padding="@dimen/padding_medium_10"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/clPhone">

        <EditText
            android:id="@+id/edtPassword"
            style="@style/editTextLoginWhite"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgShowPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hide_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtAgree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:fontFamily="@font/avenirltstd_medium"
        android:text="@string/i_agree_to_the_terms_and_conditions"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/imgCheck"
        app:layout_constraintTop_toBottomOf="@+id/clPassword" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_semi_medium"
        android:background="@drawable/bg_login_purple_rounded"
        android:fontFamily="@font/avenirltstd_medium"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/txtAgree" />


    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_semi_medium"
        android:fontFamily="@font/avenirltstd_medium"
        android:gravity="end"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtLogin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_semi_medium"
        android:fontFamily="@font/avenirltstd_bold"
        android:text="@string/login_with_exclaimation"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/txtNoAccount" />


    <ImageView
        android:id="@+id/imgCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_large"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="@+id/txtAgree"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/txtAgree"
        app:srcCompat="@drawable/checkbox_unselect" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>