<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".enroll.ui.LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/margin_medium_large_16"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:fontFamily="@font/avenirltstd_bold"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_30"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:fontFamily="@font/avenirltstd_roman"
        android:text="@string/enter_your_credentials_to_connect"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_semi_medium"
        android:background="@drawable/bg_login_white_rounded"
        android:padding="@dimen/margin_medium_large"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/email_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingLeft="@dimen/margin_medium_large"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_medium_large_16"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_medium_large_16"
        android:background="@drawable/bg_login_white_rounded"
        android:padding="@dimen/padding_medium_10"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/clEmail">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:paddingLeft="@dimen/padding_medium_10"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgShowPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hide_password"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:fontFamily="@font/avenirltstd_medium"
        android:text="@string/forgot_password_with_question"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/clPassword" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_login_purple_rounded"
        android:fontFamily="@font/avenirltstd_medium"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_18"
        app:layout_constraintBottom_toTopOf="@+id/txtOrConnect"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

    <TextView
        android:id="@+id/txtOrConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:text="@string/or_connect_with"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintBottom_toTopOf="@+id/txtRegister"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:layout_marginRight="@dimen/margin_medium_large"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/txtOrConnect"
        app:layout_constraintEnd_toStartOf="@+id/txtOrConnect"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/txtOrConnect" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="@dimen/margin_medium_large"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/txtOrConnect"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/txtOrConnect"
        app:layout_constraintTop_toTopOf="@+id/txtOrConnect" />

    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_semi_medium"
        android:fontFamily="@font/avenirltstd_medium"
        android:gravity="end"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_semi_medium"
        android:fontFamily="@font/avenirltstd_bold"
        android:text="@string/register_here"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/txtNoAccount" />

    <ImageView
        android:id="@+id/imgFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_xlarge"
        app:layout_constraintBottom_toTopOf="@+id/txtNoAccount"
        app:layout_constraintEnd_toStartOf="@+id/imgGoogle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtOrConnect"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imgGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txtNoAccount"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imgFacebook"
        app:layout_constraintTop_toBottomOf="@+id/txtOrConnect"
        app:srcCompat="@drawable/google" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
